kubernetes/apps/owncloud/owncloud.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: owncloud
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud-redis
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud-redis
  template:
    metadata:
      labels:
        app: owncloud-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud-redis
  namespace: owncloud
spec:
  ports:
    - port: 6379
  selector:
    app: owncloud-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
        - name: owncloud
          image: owncloud/server:latest
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: data
              mountPath: /mnt/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: owncloud-data
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: owncloud
spec:
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: owncloud
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud
  namespace: owncloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.isarcloud.eu
      secretName: owncloud-tls
  rules:
    - host: files.isarcloud.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owncloud
                port:
                  number: 8080
